--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Arquitecto de software",
 	"ARCHITECT_SHORT": "Arquitecto",
 	"arenella-accounts-menu-availability": "Disponibilidad",
@@ -119,7 +121,7 @@
 	"arenella-create-candidate-btn-save": "Ahorrar",
 	"arenella-create-candidate-contract": "Contrato",
 	"arenella-create-candidate-contract-rate": "Tarifa de contrato",
-	"arenella-create-candidate-curriculum": "Plan de estudios",
+	"arenella-create-candidate-curriculum": "Curriculum",
 	"arenella-create-candidate-day": "Día",
 	"arenella-create-candidate-email": "Correo electrónico",
 	"arenella-create-candidate-eur": "EUR",
@@ -128,8 +130,8 @@
 	"arenella-create-candidate-gbp": "GBP",
 	"arenella-create-candidate-hour": "Hora",
 	"arenella-create-candidate-intro": "Los reclutadores, las agencias de TI y los gerentes de contratación son todos independientes de la plataforma Arenella-ICT, lo que convierte a Arenella-ICT en una ventanilla única para acceder a toda una red de nuevas oportunidades. Al cargar su CV y crear su perfil, obtiene acceso a esta red de nuevas posibilidades.",
-	"arenella-create-candidate-perm": "Permanente",
-	"arenella-create-candidate-perm-rate": "Tarifa permanente",
+	"arenella-create-candidate-perm": "Salario",
+	"arenella-create-candidate-perm-rate": "Salario",
 	"arenella-create-candidate-personal-intro": "Presentación personal",
 	"arenella-create-candidate-photo": "Foto de perfil [ .jpeg ] Máx. 1 MB",
 	"arenella-create-candidate-surname": "Apellido",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estonio",
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
+	"expres": "Expres",
 	"failure": "Falla",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandés",
@@ -810,13 +813,14 @@
 	"func-web-dev": "Desarrollador web",
 	"GERMAN": "Alemán",
 	"GERMANY": "Alemania",
+	"go": "Go",
 	"GREECE": "Grecia",
 	"GREEK": "Griego",
 	"Hide": "Esconder",
 	"hide-filters": "Ocultar filtros",
 	"HINDI": "Hindi",
 	"HUNGARIAN": "Húngaro",
-	"HUNGARY": "Hambriento",
+	"HUNGARY": "Hungría",
 	"INDIA": "India",
 	"info-item-contract-rate": "",
 	"info-item-days-onsite-fully-remote": "",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " A ",
 	"info-item-title-years-experience": "",
+	"ios": "IOS",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutador de TI",
 	"IT_RECRUITER_SHORT": "Reclutamiento",
@@ -849,6 +854,7 @@
 	"ITALY": "Italia",
 	"JAVA_DEV": "Desarrollador Java",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Candidato - CV Actualizado",
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "Candidatos de hoy",
+	"next": "Next",
 	"no": "No",
+	"node": "Node",
 	"NORTH_AMERICA": "América del norte",
 	"NORTHERN_EUROPE": "Europa del Norte",
 	"NORTHERN_IRELAND": "Irlanda del Norte",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Noruega",
 	"ONE_MONTH_SUBSCRIPTION": "1 mes",
 	"PAKISTAN": "Pakistán",
+	"php": "PHP",
 	"POLAND": "Polonia",
 	"POLISH": "Polaco",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Gerente de proyecto",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"ROMANIA": "Rumania",
 	"ROMANIAN": "Rumano",
+	"ruby-on-rails": "Ruby On Rails",
 	"RUSSIAN": "Ruso",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Suecia",
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
+	"test-manager": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Pavo",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "Ucranio",
 	"URDU": "Urdu",
 	"US": "EE.UU",
+	"vue": "Vue",
 	"WEB_DEV": "Desarrollador web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidental",
