--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Architecte logiciel",
 	"ARCHITECT_SHORT": "Architecte",
 	"arenella-accounts-menu-availability": "Disponibilité",
@@ -119,7 +121,7 @@
 	"arenella-create-candidate-btn-save": "Enregistrer ",
 	"arenella-create-candidate-contract": "Contrat ",
 	"arenella-create-candidate-contract-rate": "Taux de contrat",
-	"arenella-create-candidate-curriculum": "CV",
+	"arenella-create-candidate-curriculum": "Curriculum",
 	"arenella-create-candidate-day": "Journée",
 	"arenella-create-candidate-email": "Email",
 	"arenella-create-candidate-eur": "EUR",
@@ -128,8 +130,8 @@
 	"arenella-create-candidate-gbp": "GBP",
 	"arenella-create-candidate-hour": "Heure",
 	"arenella-create-candidate-intro": "Les recruteurs, agences informatiques et responsables du recrutement sont tous indépendants de la plateforme Arenella-ICT, faisant d'Arenella-ICT un guichet unique pour atteindre l'ensemble de l'entreprise et créer de nouvelles opportunités. En téléchargeant votre CV et en créant votre profil, vous accédez à ce réseau de nouvelles opportunités.",
-	"arenella-create-candidate-perm": "Perm",
-	"arenella-create-candidate-perm-rate": "Taux de perm",
+	"arenella-create-candidate-perm": "Salaire",
+	"arenella-create-candidate-perm-rate": "Salaire",
 	"arenella-create-candidate-personal-intro": "Présentez-vous",
 	"arenella-create-candidate-photo": "Photo de profil [ .jpeg ] Max 1 Mo",
 	"arenella-create-candidate-surname": "Nom de famille",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estonien",
 	"EU_REMOTE": "Europe - À distance",
 	"EUROPE": "L'Europe",
+	"expres": "Expres",
 	"failure": "Échec",
 	"FINLAND": "Finlande",
 	"FINNISH": "Finlandais",
@@ -810,13 +813,14 @@
 	"func-web-dev": "Développeur Web",
 	"GERMAN": "Allemand",
 	"GERMANY": "Allemagne",
+	"go": "Go",
 	"GREECE": "Grèce",
 	"GREEK": "Grec",
 	"Hide": "Cacher",
 	"hide-filters": "Masquer les filtres",
 	"HINDI": "Hindi",
 	"HUNGARIAN": "Hongrois",
-	"HUNGARY": "Affamé",
+	"HUNGARY": "Hongrie",
 	"INDIA": "Inde",
 	"info-item-contract-rate": "Taux de contrat",
 	"info-item-days-onsite-fully-remote": "Entièrement distant",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "Habilitation de sécurité",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
+	"ios": "IOS",
 	"IRELAND": "Irlande",
 	"IT_RECRUITER": "Recruteur informatique",
 	"IT_RECRUITER_SHORT": "Recrutement",
@@ -849,6 +854,7 @@
 	"ITALY": "Italie",
 	"JAVA_DEV": "Développeur Java",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Lettonie",
 	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Candidat - CV mis à jour",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidats du jour",
+	"next": "Next",
 	"no": "Non",
+	"node": "Node",
 	"NORTH_AMERICA": "Amérique du Nord",
 	"NORTHERN_EUROPE": "Europe du Nord",
 	"NORTHERN_IRELAND": "Irlande du Nord",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Norvégien",
 	"ONE_MONTH_SUBSCRIPTION": "1 mois",
 	"PAKISTAN": "Pakistan",
+	"php": "PHP",
 	"POLAND": "Pologne",
 	"POLISH": "Polonais",
 	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Chef de projet",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
 	"rec-prof-country-ireland": "Irlande",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Irlande",
 	"ROMANIA": "Roumanie",
 	"ROMANIAN": "Roumain",
+	"ruby-on-rails": "Ruby On Rails",
 	"RUSSIAN": "Russe",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Suède",
 	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
+	"test-manager": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mois",
 	"TURKEY": "Dinde",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "",
 	"URDU": "Ourdou",
 	"US": "États-Unis",
+	"vue": "Vue",
 	"WEB_DEV": "Développeur Web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
