--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1,4 +1,6 @@
 {
+	"android": "Android",
+	"angular": "Angular",
 	"ARCHITECT": "Architetto del software",
 	"ARCHITECT_SHORT": "Architetto",
 	"arenella-accounts-menu-availability": "Disponibilità",
@@ -119,7 +121,7 @@
 	"arenella-create-candidate-btn-save": "Salva",
 	"arenella-create-candidate-contract": "Contratto",
 	"arenella-create-candidate-contract-rate": "Tasso di contratto",
-	"arenella-create-candidate-curriculum": "Programma scolastico",
+	"arenella-create-candidate-curriculum": "Curriculum",
 	"arenella-create-candidate-day": "Giorno",
 	"arenella-create-candidate-email": "E-mail",
 	"arenella-create-candidate-eur": "Euro",
@@ -128,8 +130,8 @@
 	"arenella-create-candidate-gbp": "GBP",
 	"arenella-create-candidate-hour": "Ora",
 	"arenella-create-candidate-intro": "I reclutatori, le agenzie IT e gli Hiring Manager sono tutti indipendenti dalla piattaforma Arenella-ICT, rendendo Arenella-ICT uno sportello unico per raggiungere un'intera rete di nuove opportunità. Caricando il tuo CV e creando il tuo profilo, stai ottenendo l'accesso a questa rete di nuove possibilità.",
-	"arenella-create-candidate-perm": "Permanenza",
-	"arenella-create-candidate-perm-rate": "Tasso di permanenza",
+	"arenella-create-candidate-perm": "Stipendio",
+	"arenella-create-candidate-perm-rate": "Stipendio",
 	"arenella-create-candidate-personal-intro": "Introduzione personale",
 	"arenella-create-candidate-photo": "Foto del profilo [ .jpeg ] Max 1 MB",
 	"arenella-create-candidate-surname": "Cognome",
@@ -787,6 +789,7 @@
 	"ESTONIAN": "Estone",
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
+	"expres": "Expres",
 	"failure": "Fallimento",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandese",
@@ -810,13 +813,14 @@
 	"func-web-dev": "Sviluppatore Web",
 	"GERMAN": "Tedesco",
 	"GERMANY": "Germania",
+	"go": "Go",
 	"GREECE": "Grecia",
 	"GREEK": "Greco",
 	"Hide": "Nascondere",
 	"hide-filters": "Nascondi filtri",
 	"HINDI": "Hindi",
 	"HUNGARIAN": "Ungherese",
-	"HUNGARY": "Affamato",
+	"HUNGARY": "Ungheria",
 	"INDIA": "India",
 	"info-item-contract-rate": "Tasso di contratto",
 	"info-item-days-onsite-fully-remote": "Completamente remoto",
@@ -840,6 +844,7 @@
 	"info-item-title-security-clearance": "Autorizzazione di sicurezza",
 	"info-item-title-to": " a",
 	"info-item-title-years-experience": "Anni di esperienza",
+	"ios": "IOS",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutatore informatico",
 	"IT_RECRUITER_SHORT": "Reclutamento",
@@ -849,6 +854,7 @@
 	"ITALY": "Italia",
 	"JAVA_DEV": "Sviluppatore Java",
 	"JAVA_DEV_SHORT": "Java",
+	"kotlin": "Kotlin",
 	"LATVIA": "Lettonia",
 	"LATVIAN": "Lettone",
 	"LIECHTENSTEIN": "Liechtenstein",
@@ -891,7 +897,9 @@
 	"newsfeed-cv-updated": "Candidato - CV aggiornato",
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "I candidati di oggi",
+	"next": "Next",
 	"no": "No",
+	"node": "Node",
 	"NORTH_AMERICA": "America del Nord",
 	"NORTHERN_EUROPE": "Europa settentrionale",
 	"NORTHERN_IRELAND": "Irlanda del Nord",
@@ -899,13 +907,17 @@
 	"NORWEGEN": "Norvegia",
 	"ONE_MONTH_SUBSCRIPTION": "1 mese",
 	"PAKISTAN": "Pakistan",
+	"php": "PHP",
 	"POLAND": "Polonia",
 	"POLISH": "Polacco",
 	"PORTUGAL": "Portogallo",
 	"PORTUGUESE": "Portoghese",
+	"product-owner": "Product Owner",
 	"PROJECT_MANAGER": "Responsabile del progetto",
 	"PROJECT_MANAGER_SHORT": "PM",
+	"python": "Python",
 	"QA_SHORT": "QA",
+	"react": "React",
 	"rec-prof-country-belgium": "Belgio",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -950,7 +962,9 @@
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"ROMANIA": "Romania",
 	"ROMANIAN": "Rumeno",
+	"ruby-on-rails": "Ruby On Rails",
 	"RUSSIAN": "Russo",
+	"rust": "Rust",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1008,6 +1022,7 @@
 	"SWEDEN": "Svezia",
 	"SWEDISH": "Svedese",
 	"SWITZERLAND": "Svizzera",
+	"test-manager": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mesi",
 	"TURKEY": "Tacchino",
@@ -1020,6 +1035,7 @@
 	"UKRANIAN": "Ucraino",
 	"URDU": "Italiano:",
 	"US": "U.S.A.",
+	"vue": "Vue",
 	"WEB_DEV": "Sviluppatore Web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidentale",
