candidate profile view stats

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -660,6 +660,7 @@
 	"arenella-stats-searches-btn-week": "Diese Woche",
 	"arenella-stats-searches-country": "Land",
 	"arenella-stats-searches-function": "Funktion",
+	"arenella-stats-views": "Profilansichten",
 	"arenella-suggestions-add": "Hinzufügen",
 	"arenella-suggestions-both": "Beide (einschließlich Unbekannter)",
 	"arenella-suggestions-box-alert-btn-save": "Speichern",
