--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -660,6 +660,7 @@
 	"arenella-stats-searches-btn-week": "This Week",
 	"arenella-stats-searches-country": "Country",
 	"arenella-stats-searches-function": "Function",
+	"arenella-stats-views": "Profile Views",
 	"arenella-suggestions-add": "Add",
 	"arenella-suggestions-both": "Both (Includes unknown)",
 	"arenella-suggestions-box-alert-btn-save": "Save",
