--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -660,6 +660,7 @@
 	"arenella-stats-searches-btn-week": "ESTA SEMANA",
 	"arenella-stats-searches-country": "País",
 	"arenella-stats-searches-function": "Función",
+	"arenella-stats-views": "Vistas de perfil",
 	"arenella-suggestions-add": "Agregar",
 	"arenella-suggestions-both": "Ambos (Incluye desconocido)",
 	"arenella-suggestions-box-alert-btn-save": "Ahorrar",
