--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -660,6 +660,7 @@
 	"arenella-stats-searches-btn-week": "Cette semaine",
 	"arenella-stats-searches-country": "Pays",
 	"arenella-stats-searches-function": "Fonction",
+	"arenella-stats-views": "Vues de profil",
 	"arenella-suggestions-add": "Ajouter",
 	"arenella-suggestions-both": "Les deux (Inclut inconnu)",
 	"arenella-suggestions-box-alert-btn-save": "Garde",
