--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -660,6 +660,7 @@
 	"arenella-stats-searches-btn-week": "Questa settimana",
 	"arenella-stats-searches-country": "Paese",
 	"arenella-stats-searches-function": "Funzione",
+	"arenella-stats-views": "Visualizzazioni del profilo",
 	"arenella-suggestions-add": "Aggiungere",
 	"arenella-suggestions-both": "Entrambi (include sconosciuto)",
 	"arenella-suggestions-box-alert-btn-save": "Salva",
