--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -660,6 +660,7 @@
 	"arenella-stats-searches-btn-week": "Deze week",
 	"arenella-stats-searches-country": "Land",
 	"arenella-stats-searches-function": "Functie",
+	"arenella-stats-views": "Profielweergaven",
 	"arenella-suggestions-add": "Toevoegen",
 	"arenella-suggestions-both": "Beide (inclusief onbekend)",
 	"arenella-suggestions-box-alert-btn-save": "Opslaan",
