allowing MP posts to be copied to Job board

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -518,6 +518,9 @@
 	"arenella-recruiter-mp-detils-btn-edit": "Bearbeiten",
 	"arenella-recruiter-mp-detils-comments": "Kommentare",
 	"arenella-recruiter-mp-detils-desc": "Beschreibung",
+	"arenella-recruiter-mp-listing": "Jobbörse",
+	"arenella-recruiter-mp-listing-add": "Zur Jobbörse hinzufügen",
+	"arenella-recruiter-mp-listing-add-text": "Möchten Sie diese Stelle auch in der Jobbörse hinzufügen und Kandidaten die Möglichkeit geben, direkt darauf zu reagieren?\n\nKandidaten im System werden über die neue Stelle informiert, und auch Kandidaten, die nicht im System sind, können darauf reagieren.",
 	"arenella-recruiter-mp-offer-candidate": "Angebotskandidat",
 	"arenella-recruiter-mp-offer-candidate-country": "Land",
 	"arenella-recruiter-mp-offer-candidate-desc": "Haben Sie Kandidaten, die Sie derzeit nicht vermitteln können? Möchten Sie diese Kandidaten\nanderen Personalvermittlern zu einem von Ihnen festgelegten Tarif zur Verfügung stellen? Dann ist diese Funktion genau das Richtige für Sie. Fügen Sie Ihre verfügbaren Kandidaten hinzu und\nerlauben Sie anderen Personalvermittlern, Sie wegen verfügbarer Projekte zu kontaktieren.",
@@ -856,6 +859,7 @@
 	"JAVA_DEV": "Java-Entwickler",
 	"JAVA_DEV_SHORT": "Java",
 	"kotlin": "Kotlin",
+	"KOTLIN": "Kotlin",
 	"LATVIA": "Lettland",
 	"LATVIAN": "Lettisch",
 	"LIECHTENSTEIN": "Liechtenstein",
