--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -518,6 +518,9 @@
 	"arenella-recruiter-mp-detils-btn-edit": "Edit",
 	"arenella-recruiter-mp-detils-comments": "Comments",
 	"arenella-recruiter-mp-detils-desc": "Description",
+	"arenella-recruiter-mp-listing": "Job board",
+	"arenella-recruiter-mp-listing-add": "Add to Job board",
+	"arenella-recruiter-mp-listing-add-text": "Would you also like to add this position to the Job board and allow candidates to react directly? \n\nCandidates in the system will be informed of the new position and candidates not in the system will also be able to react.",
 	"arenella-recruiter-mp-offer-candidate": "Offer Candidate",
 	"arenella-recruiter-mp-offer-candidate-country": "Country",
 	"arenella-recruiter-mp-offer-candidate-desc": "Do you have candidates that you cannot currently place? Would you like to make these candidates available\n\t\t\tto other recruiters for a rate set by you? If so this feature is for you. Add your available candidates and \n\t\t\tallow other recruiters to contact you with available projects.",
@@ -856,6 +859,7 @@
 	"JAVA_DEV": "Java Developer",
 	"JAVA_DEV_SHORT": "Java",
 	"kotlin": "Kotlin",
+	"KOTLIN": "Kotlin",
 	"LATVIA": "Latvia",
 	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
