--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -518,6 +518,9 @@
 	"arenella-recruiter-mp-detils-btn-edit": "Editar",
 	"arenella-recruiter-mp-detils-comments": "Comentarios",
 	"arenella-recruiter-mp-detils-desc": "Descripción",
+	"arenella-recruiter-mp-listing": "Bolsa de trabajo",
+	"arenella-recruiter-mp-listing-add": "Añadir a la bolsa de trabajo",
+	"arenella-recruiter-mp-listing-add-text": "¿Desea añadir esta vacante a la Bolsa de Empleo y permitir que los candidatos reaccionen directamente?\n\nSe informará a los candidatos registrados en el sistema sobre la nueva vacante, y quienes no estén registrados también podrán reaccionar.",
 	"arenella-recruiter-mp-offer-candidate": "Candidato de oferta",
 	"arenella-recruiter-mp-offer-candidate-country": "País",
 	"arenella-recruiter-mp-offer-candidate-desc": "¿Tiene candidatos que no puede colocar actualmente? ¿Le gustaría poner a estos candidatos a disposición de otros reclutadores\npor una tarifa establecida por usted? Si es así, esta función es para usted. Agregue a sus candidatos disponibles y\npermita que otros reclutadores se comuniquen con usted para ofrecerle proyectos disponibles.",
@@ -856,6 +859,7 @@
 	"JAVA_DEV": "Desarrollador Java",
 	"JAVA_DEV_SHORT": "Java",
 	"kotlin": "Kotlin",
+	"KOTLIN": "Kotlin",
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
