--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -518,6 +518,9 @@
 	"arenella-recruiter-mp-detils-btn-edit": "Modifier",
 	"arenella-recruiter-mp-detils-comments": "Commentaires",
 	"arenella-recruiter-mp-detils-desc": "Description",
+	"arenella-recruiter-mp-listing": "Offres d'emploi",
+	"arenella-recruiter-mp-listing-add": "Ajouter au tableau des offres d'emploi",
+	"arenella-recruiter-mp-listing-add-text": "Souhaitez-vous également ajouter ce poste à la plateforme d'emploi et permettre aux candidats de réagir directement ?\n\nLes candidats inscrits seront informés du nouveau poste et les candidats non inscrits pourront également réagir.",
 	"arenella-recruiter-mp-offer-candidate": "Offre Candidat",
 	"arenella-recruiter-mp-offer-candidate-country": "Pays",
 	"arenella-recruiter-mp-offer-candidate-desc": "Avez-vous des candidats que vous ne pouvez pas placer actuellement ? Souhaitez-vous rendre ces candidats disponibles\nà d'autres recruteurs pour un tarif fixé par vous ? Si tel est le cas, cette fonctionnalité est faite pour vous. Ajoutez vos candidats disponibles et\npermettre à d’autres recruteurs de vous contacter avec des projets disponibles.",
@@ -856,6 +859,7 @@
 	"JAVA_DEV": "Développeur Java",
 	"JAVA_DEV_SHORT": "Java",
 	"kotlin": "Kotlin",
+	"KOTLIN": "Kotlin",
 	"LATVIA": "Lettonie",
 	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
