--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -518,6 +518,9 @@
 	"arenella-recruiter-mp-detils-btn-edit": "Modificare",
 	"arenella-recruiter-mp-detils-comments": "Commenti",
 	"arenella-recruiter-mp-detils-desc": "Descrizione",
+	"arenella-recruiter-mp-listing": "Bacheca Lavoro",
+	"arenella-recruiter-mp-listing-add": "Aggiungi alla bacheca dei lavori",
+	"arenella-recruiter-mp-listing-add-text": "Desideri aggiungere questa posizione anche alla bacheca Lavoro e consentire ai candidati di rispondere direttamente?\n\nI candidati presenti nel sistema saranno informati della nuova posizione e anche quelli non presenti nel sistema potranno rispondere.",
 	"arenella-recruiter-mp-offer-candidate": "Offerta Candidato",
 	"arenella-recruiter-mp-offer-candidate-country": "Paese",
 	"arenella-recruiter-mp-offer-candidate-desc": "Hai candidati che al momento non riesci a collocare? Vorresti rendere disponibili questi candidati\nad altri reclutatori per una tariffa da te stabilita? Se è così, questa funzione fa al caso tuo. Aggiungi i candidati disponibili e\nconsenti ad altri reclutatori di contattarti con progetti disponibili.",
@@ -856,6 +859,7 @@
 	"JAVA_DEV": "Sviluppatore Java",
 	"JAVA_DEV_SHORT": "Java",
 	"kotlin": "Kotlin",
+	"KOTLIN": "Kotlin",
 	"LATVIA": "Lettonia",
 	"LATVIAN": "Lettone",
 	"LIECHTENSTEIN": "Liechtenstein",
