--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -518,6 +518,9 @@
 	"arenella-recruiter-mp-detils-btn-edit": "Bewerk",
 	"arenella-recruiter-mp-detils-comments": "Opmerkingen",
 	"arenella-recruiter-mp-detils-desc": "Beschrijving",
+	"arenella-recruiter-mp-listing": "Vacaturebank",
+	"arenella-recruiter-mp-listing-add": "Toevoegen aan vacaturebank",
+	"arenella-recruiter-mp-listing-add-text": "Wilt u deze vacature ook toevoegen aan de vacaturebank en kandidaten de mogelijkheid bieden direct te reageren?\n\nKandidaten die in het systeem staan, worden op de hoogte gebracht van de nieuwe vacature. Ook kandidaten die niet in het systeem staan, kunnen reageren.",
 	"arenella-recruiter-mp-offer-candidate": "Kandidaat aanbieden",
 	"arenella-recruiter-mp-offer-candidate-country": "Land",
 	"arenella-recruiter-mp-offer-candidate-desc": "Heeft u kandidaten die u momenteel niet kunt plaatsen? Wilt u deze kandidaten beschikbaar stellen?\nnaar andere recruiters tegen een door u vastgesteld tarief? Dan is deze functie iets voor jou. Voeg uw beschikbare kandidaten toe en\nandere recruiters toestaan ​​contact met u op te nemen over beschikbare projecten.",
@@ -856,6 +859,7 @@
 	"JAVA_DEV": "Java-ontwikkelaar",
 	"JAVA_DEV_SHORT": "Java",
 	"kotlin": "Kotlin",
+	"KOTLIN": "Kotlin",
 	"LATVIA": "Letland",
 	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
