statistic chart layout

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -645,7 +645,7 @@
 	"arenella-stats-logins-btn-week": "Week",
 	"arenella-stats-logins-btn-year": "Year",
 	"arenella-stats-logins-candidates": "Candidates",
-	"arenella-stats-logins-recruiters": "logins: Recruiters:",
+	"arenella-stats-logins-recruiters": "Recruiters",
 	"arenella-stats-logins-title": "Logins",
 	"arenella-stats-logins-user": "User",
 	"arenella-stats-mp": "Marketplace",
