--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -644,8 +644,8 @@
 	"arenella-stats-logins-btn-today": "Hoy",
 	"arenella-stats-logins-btn-week": "Semana",
 	"arenella-stats-logins-btn-year": "Año",
-	"arenella-stats-logins-candidates": "",
-	"arenella-stats-logins-recruiters": "Inicios de sesión: Reclutadores:",
+	"arenella-stats-logins-candidates": "Candidatos",
+	"arenella-stats-logins-recruiters": "Reclutadores",
 	"arenella-stats-logins-title": "Inicios de sesión",
 	"arenella-stats-logins-user": "Usuario",
 	"arenella-stats-mp": "Mercado",
