--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -645,7 +645,7 @@
 	"arenella-stats-logins-btn-week": "Semaine",
 	"arenella-stats-logins-btn-year": "Année",
 	"arenella-stats-logins-candidates": "Candidats",
-	"arenella-stats-logins-recruiters": "Identifiants : Recruteurs :",
+	"arenella-stats-logins-recruiters": "Recruteurs",
 	"arenella-stats-logins-title": "Connexions",
 	"arenella-stats-logins-user": "Utilisateur",
 	"arenella-stats-mp": "Marché",
