--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -645,7 +645,7 @@
 	"arenella-stats-logins-btn-week": "Settimana",
 	"arenella-stats-logins-btn-year": "Anno",
 	"arenella-stats-logins-candidates": "Candidati",
-	"arenella-stats-logins-recruiters": "accessi: Reclutatori:",
+	"arenella-stats-logins-recruiters": "Reclutatori",
 	"arenella-stats-logins-title": "Accesso",
 	"arenella-stats-logins-user": "Utente",
 	"arenella-stats-mp": "Mercato",
