--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -645,7 +645,7 @@
 	"arenella-stats-logins-btn-week": "Week",
 	"arenella-stats-logins-btn-year": "Jaar",
 	"arenella-stats-logins-candidates": "Kandidaten",
-	"arenella-stats-logins-recruiters": "logins: Recruiters:",
+	"arenella-stats-logins-recruiters": "Recruiters",
 	"arenella-stats-logins-title": "Inloggen",
 	"arenella-stats-logins-user": "Gebruiker",
 	"arenella-stats-mp": "Marktplaats",
