--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -644,8 +644,8 @@
 	"arenella-stats-logins-btn-today": "Heute",
 	"arenella-stats-logins-btn-week": "Woche",
 	"arenella-stats-logins-btn-year": "Jahr",
-	"arenella-stats-logins-candidates": "",
-	"arenella-stats-logins-recruiters": "Anmeldungen: Personalvermittler:",
+	"arenella-stats-logins-candidates": "Kandidaten",
+	"arenella-stats-logins-recruiters": "Personalvermittler",
 	"arenella-stats-logins-title": "Anmeldungen",
 	"arenella-stats-logins-user": "Benutzer",
 	"arenella-stats-mp": "Marktplatz",
