UI jobboard and faq

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -158,7 +158,7 @@
 	"arenella-faqs-q4-answer": "Nein. Es fallen keine Margen, Provisionen oder Zusatzkosten an. Wenn Sie sich für das kreditbasierte Abonnement entscheiden, fallen überhaupt keine Kosten an. Wenn Sie sich für das kostenpflichtige Abonnement entscheiden, fallen lediglich die Kosten für das Abonnement selbst an.",
 	"arenella-faqs-q4-question": "Gibt es zusätzliche Kosten?",
 	"arenella-faqs-q5-answer": "Die Rechnung wird von Arenella BV, einem in den Niederlanden registrierten Unternehmen, verschickt.",
-	"arenella-faqs-q5-question": "Woher kommt die Rechnung für das Jahresabonnement",
+	"arenella-faqs-q5-question": "Woher kommt die Rechnung für das abonnement",
 	"arenella-faqs-q6-answer": "Ja. Wenn Sie den Lebenslauf des Kandidaten anzeigen/herunterladen, werden Ihnen seine Kontaktdaten angezeigt. Sie können ihn direkt anrufen.",
 	"arenella-faqs-q6-question": "Kann ich die Kandidaten direkt kontaktieren?",
 	"arenella-faqs-q7-answer": "Ja. Alle Kandidaten haben entweder ihren Lebenslauf selbst über die Website hochgeladen, mit der Absicht, ihn von Personalvermittlern herunterladen zu lassen, die sie anrufen, oder sie haben aus demselben Grund die Erlaubnis erteilt, ihn in ihrem Namen hochladen zu lassen. Wir fügen keinen Lebenslauf hinzu, der uns nicht ausdrücklich zu diesem Zweck zur Verfügung gestellt wurde.",
