--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -158,7 +158,7 @@
 	"arenella-faqs-q4-answer": "No. There are no margins, commissions or extra costs to pay. If you stick to the credit based subscription there are no costs at all. If you chose the paid subscription the only cost is the subscription itself.",
 	"arenella-faqs-q4-question": "Are there additional costs",
 	"arenella-faqs-q5-answer": "The invoice is sent from Arenella BV a Dutch registered company in the Netherlands.",
-	"arenella-faqs-q5-question": "Where will the invoice for the annual subscription come from",
+	"arenella-faqs-q5-question": "Where will the invoice for the subscription come from",
 	"arenella-faqs-q6-answer": "Yes. When you view / download the candidates CV you will see their contact details. You can call them directly.",
 	"arenella-faqs-q6-question": "Can I contact the candidates directly",
 	"arenella-faqs-q7-answer": "Yes. All candidates have either uploaded their CVs themselves via the site with the intention of having them downloaded by recruiters who will call them or have \n\t\t\t\t\t\t\t\tgiven permission to have them uploaded on their behalf for the same reason. We do not add any CV that has not been expressly provided to us for this purpose.",
