--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -158,7 +158,7 @@
 	"arenella-faqs-q4-answer": "No. No hay márgenes, comisiones ni costes adicionales que pagar. Si te quedas con la suscripción basada en créditos no hay ningún coste. Si eliges la suscripción de pago el único coste es la suscripción en sí.",
 	"arenella-faqs-q4-question": "¿Hay costos adicionales?",
 	"arenella-faqs-q5-answer": "La factura se envía desde Arenella BV, una empresa registrada en los Países Bajos.",
-	"arenella-faqs-q5-question": "¿De dónde vendrá la factura de la suscripción anual?",
+	"arenella-faqs-q5-question": "¿De dónde vendrá la factura de la suscripción?",
 	"arenella-faqs-q6-answer": "Sí. Cuando visualices o descargues el CV de los candidatos verás sus datos de contacto. Podrás llamarlos directamente.",
 	"arenella-faqs-q6-question": "¿Puedo contactar directamente a los candidatos?",
 	"arenella-faqs-q7-answer": "Sí. Todos los candidatos han subido sus CV a través del sitio con la intención de que los reclutadores los descarguen y los llamen o han dado permiso para que se suban en su nombre por el mismo motivo. No agregamos ningún CV que no nos haya sido proporcionado expresamente para este propósito.",
