--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -158,7 +158,7 @@
 	"arenella-faqs-q4-answer": "Non. Il n’y a pas de marges, de commissions ou de frais supplémentaires à payer. Si vous vous en tenez à l’abonnement basé sur le crédit, il n’y a aucun frais. Si vous avez choisi l'abonnement payant, le seul coût est l'abonnement lui-même.",
 	"arenella-faqs-q4-question": "Y a-t-il des frais supplémentaires",
 	"arenella-faqs-q5-answer": "La facture est envoyée par Arenella BV, une société néerlandaise enregistrée aux Pays-Bas.",
-	"arenella-faqs-q5-question": "D'où viendra la facture de l'abonnement annuel",
+	"arenella-faqs-q5-question": "D'où viendra la facture de l'abonnement",
 	"arenella-faqs-q6-answer": "Oui. Lorsque vous consultez/téléchargez le CV des candidats, vous verrez leurs coordonnées. Vous pouvez les appeler directement.",
 	"arenella-faqs-q6-question": "Puis-je contacter directement les candidats",
 	"arenella-faqs-q7-answer": "Oui. Tous les candidats ont soit déposé eux-mêmes leur CV via le site dans l'intention de le faire télécharger par des recruteurs qui les appelleront, soit auront\ndonné la permission de les télécharger en son nom pour la même raison. Nous n'ajoutons aucun CV qui ne nous ait pas été expressément fourni à cet effet.",
