--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -158,7 +158,7 @@
 	"arenella-faqs-q4-answer": "No. Non ci sono margini, commissioni o costi extra da pagare. Se ti attieni all'abbonamento basato sul credito non ci sono costi. Se hai scelto l'abbonamento a pagamento, l'unico costo è l'abbonamento stesso.",
 	"arenella-faqs-q4-question": "Ci sono costi aggiuntivi?",
 	"arenella-faqs-q5-answer": "La fattura viene inviata da Arenella BV, una società olandese registrata nei Paesi Bassi.",
-	"arenella-faqs-q5-question": "Da dove verrà la fattura per l'abbonamento annuale?",
+	"arenella-faqs-q5-question": "Da dove verrà la fattura per l'abbonamento?",
 	"arenella-faqs-q6-answer": "Sì. Quando visualizzi/scarichi il CV dei candidati, vedrai i loro dati di contatto. Puoi chiamarli direttamente.",
 	"arenella-faqs-q6-question": "Posso contattare direttamente i candidati?",
 	"arenella-faqs-q7-answer": "Sì. Tutti i candidati hanno caricato i loro CV tramite il sito con l'intenzione di farli scaricare dai reclutatori che li chiameranno oppure hanno dato il permesso di caricarli per loro conto per lo stesso motivo. Non aggiungiamo alcun CV che non ci sia stato espressamente fornito per questo scopo.",
