--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -158,7 +158,7 @@
 	"arenella-faqs-q4-answer": "Nee. Er zijn geen marges, commissies of extra kosten te betalen. Als u vasthoudt aan het op krediet gebaseerde abonnement, zijn er helemaal geen kosten verbonden. Als u voor het betaalde abonnement heeft gekozen, zijn de enige kosten het abonnement zelf.",
 	"arenella-faqs-q4-question": "Zijn er extra kosten?",
 	"arenella-faqs-q5-answer": "De factuur wordt verzonden vanuit Arenella BV, een Nederlands geregistreerd bedrijf in Nederland.",
-	"arenella-faqs-q5-question": "Waar komt de factuur voor het jaarabonnement vandaan?",
+	"arenella-faqs-q5-question": "Waar komt de factuur voor het abonnement vandaan?",
 	"arenella-faqs-q6-answer": "Ja. Wanneer u het cv van de kandidaten bekijkt/downloadt, ziet u hun contactgegevens. U kunt ze rechtstreeks bellen.",
 	"arenella-faqs-q6-question": "Kan ik rechtstreeks contact opnemen met de kandidaten?",
 	"arenella-faqs-q7-answer": "Ja. Alle kandidaten hebben hun CV zelf via de site geüpload met de bedoeling deze te laten downloaden door recruiters die hen zullen bellen, of\nom dezelfde reden toestemming gegeven om ze namens hen te uploaden. Wij voegen geen CV toe dat niet uitdrukkelijk voor dit doel aan ons is verstrekt.",
